syntax = "proto3";

package com.example.vertx_grpc_opentelemetry_reproducer;

option java_multiple_files = true;
option java_package = "com.example.vertx_grpc_opentelemetry_reproducer.proto";
option java_outer_classname = "SampleApiProto";

service Sample {
  rpc SomeEndpoint (SomeEndpointRequest) returns (SomeEndpointReply) {}
}

message SomeEndpointRequest {
  optional string id = 1;
}

message SomeEndpointReply {
  optional string id = 1;
  optional string name = 2;
}
